--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -35,6 +35,14 @@
                 <p class="mb-0">{{ product.name }}</p>
                 <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
                 <p class="mt-3">{{ product.description }}</p>
+                {% if request.user.is_superuser %}
+                <small class="my-2">
+                    <a class="btn btn-dark" href="{% url 'delete_product' product.id %}">
+                        Remove from Store
+                        <i class="fas fa-trash-alt"></i>
+                    </a>
+                </small>
+                {% endif %}
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
