--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -18,7 +18,8 @@
 <div class="container">
     <div class="row">
         <div class="col text-center mt-3">
-            <h2>Complete Checkout</h2>
+            <h2 class="display-5 text-uppercase">Complete Checkout</h2>
+            <hr class="w-75 mb-1">
         </div>
     </div>
     <div class="row">
