--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,19 +12,19 @@
 
 {% block content %}
 
-<div class="container-fluid">
+<div class="container-fluid text-dark">
     <div class="row">
         <div class="col text-center mt-3">
-            <h2 class="logo-font">ERR Store</h2>
+            <h2 class="display-5 text-uppercase">ERR Store</h2>
             <hr class="w-75 mb-1">
         </div>
     </div>
 </div>
 
-<div class="container">
+<div class="container text-dark">
     <div class="row">
         <div class="col text-center mt-3">
-            <h3>Equipment</h3>
+            <h3 class="display-5">Equipment</h3>
         </div>
     </div>
     <div class="slider-wrap">
@@ -56,17 +56,27 @@
     </div>
     <div class="row">
         <div class="col text-center">
-            <button class="btn btn-warning px-3 mx-2" id="prevEquip"><i class="fas fa-chevron-left"></i> Prev</button>
-            <button class="btn btn-warning px-3 mx-2" id="nextEquip">Next <i class="fas fa-chevron-right"></i></button>
+            <button class="btn btn-warning mx-2" id="prevEquip">
+                <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="font-weight-bold px-2">Prev</span>
+            </button>
+            <button class="btn btn-warning mx-2" id="nextEquip">
+                <span class="font-weight-bold px-2">Next</span>
+                <span class="icon">
+                    <i class="fas fa-chevron-right"></i>
+                </span>
+            </button>
         </div>
     </div>
 </div>
 <hr class="w-75 mb-1">
 
-<div class="container">
+<div class="container text-dark">
     <div class="row">
         <div class="col text-center mt-3">
-            <h3>Supplements</h3>
+            <h3 class="display-5">Supplements</h3>
         </div>
     </div>
     <div class="slider-wrap">
@@ -98,8 +108,18 @@
     </div>
     <div class="row">
         <div class="col text-center">
-            <button class="btn btn-warning px-3 mx-2" id="prevSupp"><i class="fas fa-chevron-left"></i> Prev</button>
-            <button class="btn btn-warning px-3 mx-2" id="nextSupp">Next <i class="fas fa-chevron-right"></i></button>
+            <button class="btn btn-warning mx-2" id="prevSupp">
+                <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="font-weight-bold px-2">Prev</span>
+            </button>
+            <button class="btn btn-warning mx-2" id="nextSupp">
+                <span class="font-weight-bold px-2">Next</span>
+                <span class="icon">
+                    <i class="fas fa-chevron-right"></i>
+                </span>
+            </button>
         </div>
     </div>
 </div>
