--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,6 +4,12 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+<div class="container-fluid text-dark">
+    <div class="row mt-3">
+      <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+        <h1>{% trans "Change Password" %}</h1>
+        <p>{% trans 'Your password is now changed.' %}</p>
+      </div>
+    </div>
+</div>
 {% endblock %}
