--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -35,8 +35,8 @@
                     Total cost including delivery: 
                     <span class="float-right">€{{ total_cost |floatformat:2 }}</span>
                 </p></strong>
-                <a href="{% url 'view_bag' %}" class="btn btn-warning btn-block rounded-0">
-                    <span class="text-uppercase">Secure Checkout</span>
+                <a href="{% url 'view_bag' %}" class="btn btn-warning float-right">
+                    <span class="font-weight-bold px-2">Secure Checkout</span>
                     <span class="icon">
                         <i class="fas fa-lock"></i>
                     </span>
