--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -25,14 +25,10 @@
     color: #aab7c4;
 }
 
-.legend-border {
-    border: 3px solid #ffc107;
-}
-
 #payment-form .form-control,
 #card-element {
     color: #000;
-    border: 1px solid #000;
+    border: 1px solid #aab7c4;
     width: 100%;
     height: 3em;
 }
