--- a/products/templates/products/add_review.html
+++ b/products/templates/products/add_review.html
@@ -12,19 +12,19 @@
 
 {% block content %}
 
-<div class="container-fluid">
+<div class="container-fluid text-dark">
     <div class="row">
         <div class="col text-center mt-3">
-            <h2 class="logo-font">ERR Store</h2>
+            <h2 class="display-5 text-uppercase">ERR Store</h2>
             <hr class="w-75 mb-1">
         </div>
     </div>
 </div>
 
-<div class="container">
+<div class="container text-dark">
     <div class="row">
         <div class="col-12 text-left">
-            <h3>Leave a review</h3>
+            <h3 class="display-5">Write a review</h3>
             <div class="row">
                 <div class="col-12 col-md-6">
                     {% if user.is_authenticated %}
@@ -33,7 +33,12 @@
                             <form method="post">
                                 {% csrf_token %}
                                 {{ form.as_p }}
-                                <button class="btn-primary">Submit</button>
+                                <button class="btn btn-success mx-2">
+                                    <span class="font-weight-bold px-2">Submit</span>
+                                    <span class="icon">
+                                        <i class="fa fa-user-edit"></i>
+                                    </span>
+                                </button>
                             </form>
                         </div>
                     {% endif %}
