--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -15,7 +15,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col text-center mt-3">
-            <h2 class="logo-font">ERR Store</h2>
+            <h2 class="display-5 text-uppercase">ERR Store</h2>
             <hr class="w-75 mb-1">
         </div>
     </div>
@@ -25,9 +25,7 @@
     <div class="row">
         <div class="col-12 col-md-6">
             <div class="image-container">
-                <a href="#">
-                    <img class="product-image" src="{{ product.image.url }}" alt="{{ product.name }}">
-                </a>
+                <img class="product-image" src="{{ product.image.url }}" alt="{{ product.name }}">
             </div>
         </div>
         <div class="col-12 col-md-6">
@@ -36,12 +34,13 @@
                 <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
                 <p class="mt-3">{{ product.description }}</p>
                 {% if request.user.is_superuser %}
-                <small class="my-2">
-                    <a class="btn btn-dark" href="{% url 'delete_product' product.id %}">
-                        Remove from Store
+                <a class="btn btn-danger mx-1" href="{% url 'delete_product' product.id %}">
+                    <span class="font-weight-bold px-1 d-none d-sm-block">Remove from Store <i class="fas fa-trash-alt"></i></span>
+                    <span class="font-weight-bold px-1 d-sm-none">Remove</span>
+                    <span class="icon d-sm-none">
                         <i class="fas fa-trash-alt"></i>
-                    </a>
-                </small>
+                    </span>
+                </a>
                 {% endif %}
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
@@ -72,10 +71,13 @@
                         </div>
 
                         <div class="col-12">
-                            <a href="{% url 'products' %}" class="btn btn-warning btn-lg">
-                                Return
+                            <a href="{% url 'products' %}" class="btn btn-dark mx-1">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="font-weight-bold px-2 my-1">Return</span>
                             </a>
-                            <input type="submit" class="btn btn-dark btn-lg" value="Add to Bag">
+                            <input type="submit" class="btn btn-warning font-weight-bold px-2 mx-1 my-1" value="Add to Bag">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
@@ -86,15 +88,21 @@
 </div>
 <hr class="w-75 mb-1">
 
-<div class="container">
+<div class="container text-dark">
     <div class="row">
-        <div class="col-6 text-left">
-            <h3>Reviews</h3>
-        </div>
-        <div class="col-6 text-left">
-            {% if user.is_authenticated %}
-            <a href="{% url 'add_review' product.id %}" class="btn btn-primary btn-lg">Leave a Review</a>
-            {% endif %}
+        <div class="col-12 text-left">
+            <h3 class="display-5">
+                Reviews
+                {% if user.is_authenticated %}
+                <a href="{% url 'add_review' product.id %}" class="btn btn-success mx-1">
+                    <span class="font-weight-bold px-2 d-none d-sm-block">Write a Review <i class="fa fa-user-edit"></i></span>
+                    <span class="font-weight-bold px-2 d-sm-none">Write a Review</span>
+                    <span class="icon d-sm-none">
+                        <i class="fa fa-user-edit"></i>
+                    </span>
+                </a>
+                {% endif %}
+            </h3>
         </div>
     </div>
     <div class="row">
@@ -111,10 +119,12 @@
                                 </span>
                             </p>
                             {{ review.comment | safe }}
+                            <hr class="w-100 mb-1">
                         </div>
                         {% endfor %}
                     {% else %}
                     <p class="lead mb-5">Currently there are no reviews for this product.</p>
+                    <hr class="w-100 mb-1">
                     {% endif %}
                 </div>
             </div>
