--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,10 +14,11 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container text-dark">
     <div class="row">
         <div class="col text-center mt-3">
-            <h2>My Profile</h2>
+            <h2 class="display-5 text-uppercase">My Profile</h2>
+            <hr class="w-75 mb-1">
         </div>
     </div>
     <div class="row">
@@ -26,7 +27,12 @@
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-warning float-right">Update Information</button>
+                <button class="btn btn-warning float-right mx-2">
+                    <span class="font-weight-bold px-2">Update Information</span>
+                    <span class="icon">
+                        <i class="fa fa-edit"></i>
+                    </span>
+                </button>
             </form>
         </div>
         <div class="col-12 col-lg-6">
