--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container-fluid text-dark">
   <div class="row mt-3">
     <div class="col-12 col-sm-8 col-md-6 col-lg-4">
       <h1>{% trans "Sign In" %}</h1>
@@ -42,7 +42,12 @@
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
         <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-        <button class="primaryAction btn btn-warning" type="submit">{% trans "Sign In" %}</button>
+        <button class="btn btn-warning float-right mx-2" type="submit">
+          <span class="font-weight-bold px-2">{% trans "Sign In" %}</span>
+          <span class="icon">
+              <i class="fa fa-sign-in"></i>
+          </span>
+        </button>
       </form>
     </div>
   </div>
