--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,9 +5,9 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container-fluid text-dark">
   <div class="row mt-3">
-    <div class="col">
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4">
       <h1>{% trans "Sign Out" %}</h1>
 
       <p>{% trans 'Are you sure you want to sign out?' %}</p>
@@ -17,7 +17,12 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="btn btn-warning" type="submit">{% trans 'Sign Out' %}</button>
+        <button class="btn btn-warning mx-2" type="submit">
+          <span class="font-weight-bold px-2">{% trans 'Sign Out' %}</span>
+          <span class="icon">
+              <i class="fa fa-sign-out"></i>
+          </span>
+        </button>
       </form>
     </div>
   </div>
