--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,11 +5,19 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+<div class="container-fluid text-dark">
+    <div class="row mt-3">
+      <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+        <h1>{% trans "Change Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form | crispy }}
-        <button class="btn btn-warning" type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
+        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+            {% csrf_token %}
+            {{ form | crispy }}
+            <button class="btn btn-warning" type="submit" name="action">
+                <span class="font-weight-bold px-2">{% trans "Change Password" %}</span>
+            </button>
+        </form>
+      </div>
+    </div>
+</div>
 {% endblock %}
