--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -19,7 +19,7 @@
         <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
             {% csrf_token %}
             {{ form | crispy }}
-            <input class="btn btn-warning" type="submit" value="{% trans 'Reset My Password' %}" />
+            <input class="btn btn-warning font-weight-bold px-2" type="submit" value="{% trans 'Reset My Password' %}" />
         </form>
     
         <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
