--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -5,7 +5,13 @@
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+<div class="container-fluid text-dark">
+    <div class="row mt-3">
+      <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+        <h1>{% trans "Sign Up Closed" %}</h1>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+        <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+      </div>
+    </div>
+</div>
 {% endblock %}
