--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,25 +22,25 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="carousel-img w-100" src="/media/gym_carousel1.jpg" alt="#">
+                        <img class="carousel-img w-100" src="{{MEDIA_URL}}gym_carousel1.jpg" alt="#">
                         <div class="carousel-caption mb-3">
                             <h2 class="display-5 text-uppercase carousel-text text-dark px-2">Gyms Nationwide</h2>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="carousel-img w-100" src="/media/gym_carousel2.jpg" alt="#">
+                        <img class="carousel-img w-100" src="{{MEDIA_URL}}gym_carousel2.jpg" alt="#">
                         <div class="carousel-caption mb-3">
                             <h2 class="display-5 text-uppercase carousel-text text-dark px-2">Tailored Workouts</h2>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="carousel-img w-100" src="/media/gym_carousel3.jpg" alt="#">
+                        <img class="carousel-img w-100" src="{{MEDIA_URL}}gym_carousel3.jpg" alt="#">
                         <div class="carousel-caption mb-3">
                             <h2 class="display-5 text-uppercase carousel-text text-dark px-1">Gym Classes</h2>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="carousel-img w-100" src="/media/gym_store.jpg" alt="#">
+                        <img class="carousel-img w-100" src="{{MEDIA_URL}}gym_store.jpg" alt="#">
                         <div class="carousel-caption mb-3">
                             <h2 class="display-5 text-uppercase carousel-text text-dark px-1">Gym Store</h2>
                         </div>
@@ -122,7 +122,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <img class="gym-service-img" src="/media/gym_carousel3.jpg" alt="gym classes">
+                <img class="gym-service-img" src="{{MEDIA_URL}}gym_carousel3.jpg" alt="gym classes">
             </div>
         </div>
     </a>
@@ -138,7 +138,7 @@
         </div>
         <div class="row">
             <div class="col-12 col-md-6">
-                <img class="gym-service-img" src="/media/gym_store.jpg" alt="gym shop">
+                <img class="gym-service-img" src="{{MEDIA_URL}}gym_store.jpg" alt="gym shop">
             </div>
             <div class="col-12 col-md-6">
                 <h3 class="display-5 d-none d-md-block">
