added robots.txt and sitemap.xml files

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="err fitness is a chain of gyms located accross ireland. we also provide structured daily workout plans and 
+        sell gym equipment & supplements online through the err fitness e-commerce store.">
+        <meta name="keywords" content="fitness, gym, gyms nationwide, gym classes, gym store, gym equipment, health supplements, workout plans, online gym, workout at home">
     {% endblock %}
 
     {% block extra_meta %}
